--- a/packages/rich-text-svelte-renderer/package.json
+++ b/packages/rich-text-svelte-renderer/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "@caisy/rich-text-svelte-renderer",
-	"version": "0.0.1",
+	"version": "0.1.13",
 	"scripts": {
 		"dev": "vite dev",
+		"rbuild": "npm version patch && svelte-kit sync && svelte-package",
 		"build": "svelte-kit sync && svelte-package",
 		"prepublishOnly": "echo 'Did you mean to publish `./package/`, instead of `./`?' && exit 1",
 		"test": "playwright test",
@@ -13,21 +14,22 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"fixtures": "*",
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/adapter-auto": "^1.0.2",
+		"@sveltejs/kit": "^1.2.3",
 		"@sveltejs/package": "^1.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"fixtures": "*",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
+		"svelte": "^3.55.1",
+		"svelte-check": "^3.0.2",
 		"tslib": "^2.4.1",
+		"turbo": "1.7.0",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
