--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.DS_Store
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # dependencies
 node_modules
@@ -31,3 +53,4 @@ yarn-error.log*
 
 # turbo
 .turbo
+.npmrc
