--- a/packages/rich-text-vue-renderer/package.json
+++ b/packages/rich-text-vue-renderer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@caisy/rich-text-vue-renderer",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
