fix: export as a library

--- a/packages/rich-text-vue-renderer/package.json
+++ b/packages/rich-text-vue-renderer/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@caisy/rich-text-svelte-renderer",
   "version": "0.1.0",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
   "private": false,
   "scripts": {
     "dev": "vite",
