--- a/packages/rich-text-vue-renderer/tsconfig.json
+++ b/packages/rich-text-vue-renderer/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "include": [
+    "env.d.ts",
+    "src/**/*",
+    "src/**/*.vue",
+    "src/lib/RichtextRenderer.vue.js"
+  ],
   "compilerOptions": {
     "allowJs": true,
     "baseUrl": ".",
