--- a/packages/rich-text-astro-renderer/package.json
+++ b/packages/rich-text-astro-renderer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@caisy/rich-text-astro-renderer",
   "private": false,
-  "version": "0.1.1",
+  "version": "0.1.2",
   "type": "module",
   "exports": {
     ".": "./index.ts"
@@ -21,6 +21,6 @@
     "astro": "^2.0.6"
   },
   "peerDependencies": {
-    "astro": "^2.0.0-beta.0"
+    "astro": "^2"
   }
 }
