--- a/packages/rich-text-react-renderer/package.json
+++ b/packages/rich-text-react-renderer/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "asdfasfdasdf",
-  "version": "0.5.5",
+  "name": "@caisy/rich-text-react-renderer",
+  "version": "0.6.1",
   "access": "public",
   "module": "dist/esm/index.js",
   "types": "dist/types.d.ts",
@@ -34,8 +34,8 @@
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
-    "react": "^17",
-    "react-dom": "^17"
+    "react": "^16 || ^17 || ^18",
+    "react-dom": "^16 || ^17 || ^18"
   },
   "files": [
     "dist"
