--- a/packages/rich-text-qwik-renderer/package.json
+++ b/packages/rich-text-qwik-renderer/package.json
@@ -1,4 +1,53 @@
 {
-  "name": "@caisy/rich-text-qwik-renderer",
-  "version": "0.0.0"
+  "name": "rich-text-qwik-renderer",
+  "version": "0.0.1",
+  "description": "reusable Qwik component library renders Caisy.io rich text response",
+  "main": "./lib/index.qwik.mjs",
+  "author": "Hassan Mostafa",
+  "license": "MIT",
+  "qwik": "./lib/index.qwik.mjs",
+  "types": "./lib-types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./lib/index.qwik.mjs",
+      "require": "./lib/index.qwik.cjs",
+      "types": "./lib-types/index.d.ts"
+    }
+  },
+  "files": [
+    "lib",
+    "lib-types"
+  ],
+  "engines": {
+    "node": ">=15.0.0"
+  },
+  "private": false,
+  "type": "module",
+  "scripts": {
+    "build": "qwik build",
+    "build.lib": "vite build --mode lib",
+    "build.types": "tsc --emitDeclarationOnly",
+    "dev": "vite --mode ssr",
+    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+    "fmt": "prettier --write .",
+    "fmt.check": "prettier --check .",
+    "lint": "eslint \"src/**/*.ts*\"",
+    "release": "np",
+    "start": "vite --open --mode ssr",
+    "qwik": "qwik"
+  },
+  "devDependencies": {
+    "@builder.io/qwik": "0.23.0",
+    "@types/eslint": "8.21.2",
+    "@types/node": "^18.15.3",
+    "@typescript-eslint/eslint-plugin": "5.55.0",
+    "@typescript-eslint/parser": "5.55.0",
+    "eslint": "8.36.0",
+    "eslint-plugin-qwik": "latest",
+    "np": "7.6.1",
+    "prettier": "2.8.4",
+    "typescript": "5.0.2",
+    "undici": "5.21.0",
+    "vite": "4.2.0"
+  }
 }
