chore: added html and json parser based
chore: added html and json parser based on tiptap package

--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,10 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
+    "test": {},
+    "test:watch": {
+      "cache": false
+    },
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**"]
