--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "packages/*"
   ],
   "scripts": {
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch",
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
@@ -15,6 +17,7 @@
   },
   "devDependencies": {
     "eslint-config-custom": "*",
+    "jest": "^29.5.0",
     "prettier": "latest",
     "turbo": "latest"
   },
