--- a/packages/rich-text-svelte-renderer/package.json
+++ b/packages/rich-text-svelte-renderer/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@caisy/rich-text-svelte-renderer",
 	"version": "0.1.22",
+	"license": "MIT",
 	"scripts": {
 		"dev": "vite dev",
 		"rbuild": "npm version patch && svelte-kit sync && svelte-package",
