--- a/packages/rich-text-astro-renderer/package.json
+++ b/packages/rich-text-astro-renderer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@caisy/rich-text-astro-renderer",
   "private": false,
-  "version": "3.2.0",
+  "version": "3.2.1",
   "type": "module",
   "exports": {
     ".": "./index.ts"
@@ -21,6 +21,6 @@
     "astro": "^3.2.3"
   },
   "peerDependencies": {
-    "astro": "^3"
+    "astro": ">=2"
   }
 }
