chore: :rotating_light: fixed build and types issues

--- a/packages/rich-text-vue-renderer/tsconfig.json
+++ b/packages/rich-text-vue-renderer/tsconfig.json
@@ -11,7 +11,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "outDir": "./dist",
+    "verbatimModuleSyntax": true,
   },
 
   "references": [
