--- a/packages/rich-text-vue-renderer/package.json
+++ b/packages/rich-text-vue-renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@caisy/rich-text-vue-renderer",
-  "version": "0.2.6",
+  "version": "0.3.0",
   "type": "module",
   "files": [
     "dist"
@@ -37,5 +37,8 @@
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.12"
+  },
+  "volta": {
+    "node": "18.19.1"
   }
 }
