--- a/packages/rich-text-qwik-renderer/package.json
+++ b/packages/rich-text-qwik-renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@caisy/rich-text-qwik-renderer",
-  "version": "0.0.2",
+  "version": "1.0.3",
   "description": "reusable Qwik component library renders Caisy.io rich text response",
   "main": "./lib/index.qwik.mjs",
   "author": "Hassan Mostafa",
@@ -37,17 +37,18 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.23.0",
-    "@types/eslint": "8.21.2",
-    "@types/node": "^18.15.3",
-    "@typescript-eslint/eslint-plugin": "5.55.0",
-    "@typescript-eslint/parser": "5.55.0",
-    "eslint": "8.36.0",
-    "eslint-plugin-qwik": "latest",
-    "np": "7.6.1",
-    "prettier": "2.8.4",
-    "typescript": "5.0.2",
-    "undici": "5.21.0",
-    "vite": "4.2.0"
+    "@builder.io/qwik": "1.10.0",
+    "@types/eslint": "8.56.10",
+    "@types/node": "20.14.11",
+    "@typescript-eslint/eslint-plugin": "7.16.1",
+    "@typescript-eslint/parser": "7.16.1",
+    "eslint": "8.57.0",
+    "eslint-plugin-qwik": "1.10.0",
+    "np": "^8.0.4",
+    "prettier": "3.3.3",
+    "typescript": "5.4.5",
+    "undici": "*",
+    "vite": "5.3.5",
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
